Fix horizontal scroll on landing page

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,12 +1,12 @@
 .main {
   background-color: $white-four;
-  height: 90vh;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   @media all and (min-width: 768px) {
-    min-height: 85.7vh;
+    height: 89vh;
   }
 }
 .image {
